Fix google scholar

--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ social-network-links:
   github: Matematikoi
   twitter: gabo_lozano
   linkedin: gabriel-octavio-lozano-pinzon
-  google-scholar: "https://scholar.google.com/citations?user=KF1sfQ4AAAAJ&hl=en&authuser=1"
+  google-scholar: "KF1sfQ4AAAAJ&hl=en&authuser=1"
   # patreon: DeanAttali
   # youtube: "@daattali"
   # whatsapp: 15551212
