--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,8 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
+# TODO: add a more significant image
+# avatar: "/assets/img/avatar-icon.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -52,7 +53,7 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "gabriel.octavius@gmail.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+  # rss: false  # remove this line if you don't want to show an RSS link at the bottom
   # facebook: deanattali
   github: Matematikoi
   twitter: gabo_lozano
