--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Gabriel Lozano
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  About Me: "about_me"
   CV: "gabriel_cv_cs.pdf"
   # Resources:
   #   - Beautiful Jekyll: "https://beautifuljekyll.com"
